--- a/src/client/src/app/pages/detailsansicht/detailsansicht.component.html
+++ b/src/client/src/app/pages/detailsansicht/detailsansicht.component.html
@@ -83,9 +83,9 @@
         <h4>{{a.modelname}}</h4>
         <h4>{{a.acceleration}} s</h4>
         <h4>{{a.color}}</h4>
-        <h4>{{a.weight_complete}}</h4>
+        <h4>{{a.weight_complete}} kg</h4>
         <h4>{{a.topSpeed}} km/h</h4>
-        <h4>{{a.storage}}</h4>
+        <h4>{{a.storage}} l</h4>
         <h4>{{a.leasing}} €</h4>
         <h4>{{a.weight_empty}}</h4>
         <h4>{{a.max_torque}}</h4>
@@ -114,7 +114,7 @@
 
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
         <h4>{{a.battery_type}}</h4>
-        <h4>{{a.battery_capacity}}</h4>
+        <h4>{{a.battery_capacity}} Ah</h4>
 
 
         <h4 *ngIf="a.window_lifter; else elseBlock">
