einheiten der filter korrekt.

--- a/src/client/src/app/pages/detailsansicht/detailsansicht.component.html
+++ b/src/client/src/app/pages/detailsansicht/detailsansicht.component.html
@@ -69,12 +69,12 @@
         <h4 class="abbr">Modell:</h4>
         <h4 class="abbr">Beschleunigung:</h4>
         <h4 class="abbr">Farbe:</h4>
-        <h4 class="abbr">Gesamtgewicht in kg:</h4>
+        <h4 class="abbr">Gesamtgewicht:</h4>
         <h4 class="abbr">Höchstgeschwindigkeit:</h4>
         <h4 class="abbr">Laderaum in Litern:</h4>
         <h4 class="abbr">Leasingpreis:</h4>
-        <h4 class="abbr">Leergewicht in kg:</h4>
-        <h4 class="abbr">max Drehmoment in Nm:</h4>
+        <h4 class="abbr">Leergewicht:</h4>
+        <h4 class="abbr">max Drehmoment:</h4>
         <h4 class="abbr">Verbrauch:</h4>
 
       </div>
@@ -87,8 +87,8 @@
         <h4>{{a.topSpeed}} km/h</h4>
         <h4>{{a.storage}} l</h4>
         <h4>{{a.leasing}} €</h4>
-        <h4>{{a.weight_empty}}</h4>
-        <h4>{{a.max_torque}}</h4>
+        <h4>{{a.weight_empty}} kg</h4>
+        <h4>{{a.max_torque}} Nm</h4>
         <h4>{{a.consumption}} kWh</h4>
 
       </div>
