Bilder für Präsi. Autos komponent einheiten angepasst.

--- a/src/client/src/app/pages/autos/autos.component.html
+++ b/src/client/src/app/pages/autos/autos.component.html
@@ -20,9 +20,9 @@
 
         <hr>
         <div>
-          <h2>Leistung in kW: {{auto.capacity}}</h2>
-          <h2>Reichweite in Km: {{auto.reach}}</h2>
-          <h2>Preis in €: {{auto.price}}</h2>
+          <h2>Leistung: {{auto.capacity}} kW</h2>
+          <h2>Reichweite: {{auto.reach}} km</h2>
+          <h2>Preis: {{auto.price}} €</h2>
 
           <hr>
           <!--Bewertungen  -->
