--- a/src/client/src/app/pages/detailsansicht/detailsansicht.component.html
+++ b/src/client/src/app/pages/detailsansicht/detailsansicht.component.html
@@ -32,7 +32,7 @@
 
       <!--Bewertungen  -->
       <h3>
-        <i class="material-icons md-36">stars</i> Bewertungen: <b>{{currentRate}}</b>
+        <i class="material-icons md-36">stars</i> Bewertung: <b>{{currentRate}}</b>
 
         <div class="mystars">
           <ngb-rating [(rate)]="currentRate" [readonly]="ratingConfig.readonly">
